# krcg-bot

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: static.yml
krcg_bot/: __init__.py
tests/: conftest.py  test_bot.py
