[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krcg-bot"
version = "4.3"
description = "Discord bot for VTES cards"
readme = "README.md"
license = "MIT"
authors = [{ name = "lionelpx", email = "lionel.panhaleux@gmail.com" }]
maintainers = [{ name = "lionelpx", email = "lionel.panhaleux@gmail.com" }]
keywords = ["vampire", "vtes", "ccg", "discord", "bot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.10"
dependencies = ["hikari", "krcg>=4.16", "setuptools", "unidecode"]

[dependency-groups]
dev = ["ruff", "ipython", "pytest", "mypy"]

[project.urls]
Homepage = "http://github.com/lionel-panhaleux/krcg-bot"
Repository = "http://github.com/lionel-panhaleux/krcg-bot"
Issues = "http://github.com/lionel-panhaleux/krcg-bot/issues"

[project.scripts]
krcg-bot = "krcg_bot:main"

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "krcg"
ignore_missing_imports = true
